Update Dockerfile and devcontainer configuration for C23 development
- Switch base image to Alpine for a lighter footprint
- Install additional tools: clang and sudo
- Adjust shell to sh
- Enhance devcontainer.json with more VSCode extensions and update postCreateCommand to check for clang version
- Add initial main.c file

--- a/.devcontainer/Dockerfile
+++ b/.devcontainer/Dockerfile
@@ -1,32 +1,36 @@
-# Use the official Ubuntu 24.04 image as a base
-FROM mcr.microsoft.com/devcontainers/base:ubuntu-24.04
+
+# Use the official Microsoft Alpine devcontainer image as a base
+FROM mcr.microsoft.com/devcontainers/base:alpine
+
 
 # Install GCC with C23 support and essential build tools
-RUN apt-get update \
-    && apt-get install -y --no-install-recommends \
+RUN apk update \
+    && apk add --no-cache \
         gcc \
         g++ \
+        clang \
         make \
         cmake \
         gdb \
         git \
-    && apt-get clean \
-    && rm -rf /var/lib/apt/lists/*
+        sudo
+
 
 # Set GCC as the default compiler
 ENV CC=gcc
 ENV CXX=g++
 
-# Set the default shell to bash
-SHELL ["/bin/bash", "-c"]
+
+# Set the default shell to sh
+SHELL ["/bin/sh", "-c"]
+
 
 # Set up a non-root user (optional, recommended for devcontainers)
 ARG USERNAME=vscode
 ARG USER_UID=1000
 ARG USER_GID=1000
-RUN if ! getent group $USERNAME >/dev/null; then groupadd --gid $USER_GID $USERNAME; fi \
-    && if ! id -u $USERNAME >/dev/null 2>&1; then useradd --uid $USER_UID --gid $USER_GID -m $USERNAME; fi \
-    && apt-get update && apt-get install -y sudo \
+RUN addgroup -g $USER_GID $USERNAME || true \
+    && adduser -D -u $USER_UID -G $USERNAME $USERNAME || true \
     && echo "$USERNAME ALL=(ALL) NOPASSWD:ALL" >> /etc/sudoers.d/$USERNAME \
     && chmod 0440 /etc/sudoers.d/$USERNAME
 
